# honeybee_REVIVE

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  _extend_honeybee_ph.py  dev-requirements.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yaml  ci.yml  tests.yaml
context/: ARCHITECTURE.md  CODING_STANDARDS.md  PRD.md  README.md  TECH_STACK.md
docs/: getting-started.md  index.md  nav.yml  packages.md
honeybee_energy_revive/: .index.md  __init__.py  _extend_honeybee_energy_revive.py  boundarycondition.py
honeybee_energy_revive/hvac/: equipment.py
honeybee_energy_revive/properties/: ruleset.py
honeybee_revive/: .index.md  CO2_measures.py  __init__.py  _extend_honeybee_ph.py  fuels.py  grid_region.py  national_emissions.py
honeybee_revive/cli/: graph.py
honeybee_revive/output/: _shared.py  resilience_hourly_data.py  resilience_set_data.py  resilience_summer_graphs.py  resilience_winter_graphs.py  set_calculator.py
honeybee_revive/properties/: aperture.py  face.py  model.py  room.py  shade.py  space.py
honeybee_revive_measures/: .index.md
honeybee_revive_standards/: .index.md
honeybee_revive_standards/CO2_measures/: _load_CO2_measures.py  phius_2024_CO2_measures.json
honeybee_revive_standards/appliances/: _load_appliances.py  phius_revive_2024_appliances_abridged.json
honeybee_revive_standards/cambium_factors/: CAMXc.json  NYSTc.json  (+2 more)
ladybug_revive/: .index.md  adjustment_factors.py  resiliency_epw.py
planning/: .instructions.md  README.md  STATUS.md
tests/: .index.md  conftest.py
(+83 files in other folders)
