[project]
name = "your-package-name"
version = "0.1.0"
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
maintainers = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["some", "keywords", "for", "your", "package"]
dependencies = ["pandas>=1.0", "numpy>=1.18"]

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/yourusername/your-repo"
documentation = "https://example.com/docs"
changelog = "https://example.com/changelog"

[tool.coverage.run]
command_line = "-m pytest tests"
source = [
    "honeybee_energy_revive",
    "honeybee_revive",
    "honeybee_revive_standards",
]
branch = true
cover_pylib = false
omit = [
    "*/__init__.py",
    "*.venv/*",
    "*.venv_mbair/*",
    "honeybee_revive_standards/cambium_factors/_generate_json_files.py",
]


[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.html]
directory = "_coverage_html"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[tool.black]
line-length = 120
